Remove the Accumulo Monitor from accumulo-embed, and make util accumulo run start on Java 21 (#1978)
* Remove the Accumulo Monitor from accumulo-embed

geowave util accumulo run (AccumuloMiniCluster) started the Accumulo
Monitor web UI on port 9995 next to its mini cluster, and accumulo-embed
depended on accumulo-monitor 2.0.1 for it. accumulo-monitor is restricted
content in DEPENDENCIES (#31489). It also brought a Jersey 2.28 set
(jersey-container-jetty-http, jersey-container-servlet-core, jersey-mvc,
jersey-mvc-freemarker, jersey-bean-validation, jersey-hk2),
jetty-continuation, servlet-api 2.4, hibernate-validator 6.0.11 and
jakarta.ws.rs-api 2.1.5, whose classes are in the javax.ws.rs package. The
monitor has to go before GeoWave's own Jersey can move to 3.x, because
those GAVs would collide with Jersey 3's.

AccumuloMiniCluster no longer sets MONITOR_PORT or execs Monitor. The
cluster it starts is unchanged: ZooKeeper, a master, a garbage collector and
two tablet servers. accumulo-embed drops the dependency and keeps excluding
accumulo-monitor from accumulo-minicluster. The test module also got the
monitor from accumulo-minicluster and accumulo-test, which both depend on
it, so it now excludes it from both. Nothing in the harness starts the
monitor: AccumuloStoreTestEnvironment execs only the tablet servers, master
and garbage collector. No module resolves accumulo-monitor any more, so the
root pom stops managing it. The user guide, the util accumulo run manpage
and the rest of the docs never mentioned the monitor or its port.

On the IT classpath this removes the monitor, the Jersey 2.28 artifacts,
jetty-continuation, servlet-api 2.4, hibernate-validator, jakarta.el,
classmate and jboss-logging, plus the jersey-server,
jersey-media-json-jackson, jersey-media-jaxb and jersey-entity-filtering
2.23.1 that the monitor was the test module's only route to. It also moves
validation-api from 2.0.1.Final to 1.1.0.Final and freemarker from
2.3.27-incubating to GeoServe